tests/snapshots/snapshot_tests__array_copy_sum.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_copy_sum.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int c i (Read-Int-Int b_next i)) i) (Read-Int-Int b_next i))",
        "(= (Read-Int-Int (Write-Int-Int c i 11796) i) 11796)",
        "(= (Read-Int-Int (Write-Int-Int c i 15922) i) 15922)",
        "(= (Read-Int-Int (Write-Int-Int c i 11798) i) 11798)",
        "(= (Read-Int-Int (Write-Int-Int c i 38083) i) 38083)",
        "(= (Read-Int-Int (Write-Int-Int c i 8799) i) 8799)",
        "(= (Read-Int-Int (Write-Int-Int c i 14795) i) 14795)",
        "(= (Read-Int-Int (Write-Int-Int c i 29283) i) 29283)",
        "(= (Read-Int-Int (Write-Int-Int c i 2851) i) 2851)",
        "(= (Read-Int-Int (Write-Int-Int c i 20743) i) 20743)",
        "(= (Read-Int-Int (Write-Int-Int c Z 11796) Z) 11796)",
        "(= (Read-Int-Int (Write-Int-Int c Z 52868) Z) 52868)",
        "(= (Read-Int-Int (Write-Int-Int c_next Z (- i)) Z) (- i))",
        "(= (Read-Int-Int (Write-Int-Int c i (Read-Int-Int c_next i)) i) (Read-Int-Int c_next i))",
        "(= (Read-Int-Int (Write-Int-Int c_next Z i) Z) (Read-Int-Int c_next Z))",
        "(= (Read-Int-Int (Write-Int-Int c_next Z i) Z) i)",
        "(= (Read-Int-Int (Write-Int-Int c i 14795) i) (Read-Int-Int c i))",
    ],
}
