tests/snapshots/snapshot_tests__array_doub_access_init.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_doub_access_init.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 i N) N) (Read-Int-Int Array-Int-Int!val!1 N))",
    ],
}
